[tool.poetry]
name = "dacite-retrofit"
version = "1.0.1"
description = "A dacite fork with support for PEP 585/604 typehints in 3.8+."
authors = ["trag1c <trag1cdev@yahoo.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "dacite", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
future-typing = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
coveralls = "^3.3.1"
mypy = "^1.6.1"
black = "^23.10.1"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
